# ERPL

./: README.md  cenas a fazer.txt  coisas que fiz.txt  result.py  script.py  test.py
bibl/image_plus_text/: LICENSE  imgplustxt.py  pyproject.toml  readme.md  script.py
bibl/image_plus_text/imageplustxt/: __init__.py
dissertacao/: dissertation.aux  (+6 more)
erpl/: README.md  erpl  erpl2  erplpe  exemplo_arrasta.erpl  exemplo_simples.erpl  exemplo_tudo.erpl  index.html  linguagem  model.md  pyproject.toml  regras.txt  room.erpl  t  test.json  test.txt  v1.txt  v10.erpl  v11.erpl  v12 copy.erpl  v12-1.erpl  v12-2.erpl  v12-4.erpl  v12.erpl  v13.erpl  v3.txt  v4.txt  v4c.txt  v5.txt  v9.erpl  v9pro.erpl
erpl/erpl/: __init__.py
erpl/erpl/assets/objects/cofre/: cofre.erobj
erpl/erpl/assets/objects/door/: door.json
erpl/erpl/assets/objects/porta/: porta.erobj
erpl/erpl/assets/objects/safe/: safe.json
erpl/erpl/engine/: game.py  pe.py
erpl/erpl/engine/model/: challenge.py  escape_room.py  event.py  game_state.py  hitbox.py  inventory.py  load.py  object.py  poscondition.py  precondition.py  precondition_tree.py  scenario.py  settings.py  sound.py  state.py  transition.py  utils.py  view.py
erpl/erpl/engineP5/: game_model.json  index.html  p5_export.py  server.py  sketch.js  style.css
erpl/erpl/engineP5/model/: challenge.js  escape_room.js  event.js  game_state.js  hitbox.js  inventory.js  load.js  object.js  p5collide.js  poscondition.js  precondition.js  precondition_tree.js  scenario.js  sound.js  transition.js  utils.js  view.js
erpl/erpl/engineP5/tmp/: game_model.json
erpl/erpl/model/: action.py  event.py  hitbox.py  object.py  scenario.py  sound.py  transition.py  trigger.py  trigger_tree.py  utils.py  view.py
erpl/erpl/parser/: grammar_erobj.txt  grammar_erpl.txt  obj_parser.py  parser.py  script.py  test.py
src/: pyproject.toml  readme.md
src/engine/: game.py  pe.py
src/engine/model/: er_state.py  escape_room.py  load.py  object.py  scene.py  state.py  utils.py
src/erpl/: __init__.py
src/erpl/assets/images/: door_transition.psd
src/erpl/engine/: game.py  pe.py
src/erpl/engine/model/: challenge.py  er_state.py  escape_room.py  event.py  game_state.py  inventory.py  load.py  object.py  poscondition.py  precondition.py  scene.py  state.py  utils.py
src/erpl/parser/: grammar_erobj.txt  grammar_erpl.txt  obj_parser.py  parser.py
src/parser/: grammar_erpl.txt  parser.py
(+121 files in other folders)
