[build-system]
build-backend = "flit_core.buildapi"

[project]
name = "image_plus_txt"
authors = [{name = "surumkata", email = "a93277@uminho.pt"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["PIL","argparse"]
readme = "readme.md"

[project.scripts]
ipt = "image_plus_txt:image_plus_txt"